[gd_scene load_steps=4 format=3 uid="uid://dec4wcfgxajg5"]

[ext_resource type="Script" path="res://Scripts/card_crafter.gd" id="1_vn0ae"]
[ext_resource type="Texture2D" uid="uid://d127pfpldgh1l" path="res://Assets/generatordesign.png" id="2_1kq1c"]
[ext_resource type="PackedScene" uid="uid://b41yu27wmglap" path="res://Scenes/icon_button.tscn" id="3_421r6"]

[node name="Card Crafter" type="Node2D"]
script = ExtResource("1_vn0ae")

[node name="main_camera" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)

[node name="background_image" type="Sprite2D" parent="."]
texture = ExtResource("2_1kq1c")

[node name="generate" type="Button" parent="."]
offset_left = -902.0
offset_top = -367.0
offset_right = -527.0
offset_bottom = -292.0
theme_override_font_sizes/font_size = 34
action_mode = 0
text = "generate"

[node name="new" type="Button" parent="."]
offset_left = -902.0
offset_top = -524.0
offset_right = -527.0
offset_bottom = -449.0
theme_override_font_sizes/font_size = 34
action_mode = 0
text = "new"

[node name="new2" type="Button" parent="."]
offset_left = 649.0
offset_top = -524.0
offset_right = 947.0
offset_bottom = -466.0
theme_override_font_sizes/font_size = 28
action_mode = 0
text = "Return to Main Menu"

[node name="load" type="Button" parent="."]
offset_left = -711.0
offset_top = -446.0
offset_right = -527.0
offset_bottom = -371.0
theme_override_font_sizes/font_size = 34
action_mode = 0
text = "load"

[node name="save" type="Button" parent="."]
offset_left = -902.0
offset_top = -446.0
offset_right = -714.0
offset_bottom = -371.0
theme_override_font_sizes/font_size = 34
action_mode = 0
text = "save"

[node name="edit" type="Button" parent="."]
offset_left = -902.0
offset_top = 335.0
offset_right = -523.0
offset_bottom = 410.0
theme_override_font_sizes/font_size = 34
action_mode = 0
text = "edit"

[node name="delete" type="Button" parent="."]
offset_left = -902.0
offset_top = 414.0
offset_right = -523.0
offset_bottom = 489.0
theme_override_font_sizes/font_size = 34
action_mode = 0
text = "delete"

[node name="prev" type="Button" parent="."]
offset_left = -902.0
offset_top = 255.0
offset_right = -715.0
offset_bottom = 330.0
theme_override_font_sizes/font_size = 34
action_mode = 0
text = "prev"

[node name="next" type="Button" parent="."]
offset_left = -711.0
offset_top = 255.0
offset_right = -523.0
offset_bottom = 330.0
theme_override_font_sizes/font_size = 34
action_mode = 0
text = "next"

[node name="crossbutton" parent="." instance=ExtResource("3_421r6")]
offset_left = -190.0
offset_top = -380.0
offset_right = -27.0
offset_bottom = -208.0

[node name="squarebutton" parent="." instance=ExtResource("3_421r6")]
offset_left = 14.0
offset_top = -384.0
offset_right = 178.0
offset_bottom = -207.0

[node name="trianglebutton" parent="." instance=ExtResource("3_421r6")]
offset_left = -346.0
offset_top = -254.0
offset_right = -185.0
offset_bottom = -75.0

[node name="crescentbutton" parent="." instance=ExtResource("3_421r6")]
offset_left = 173.0
offset_top = -248.0
offset_right = 338.0
offset_bottom = -76.0

[node name="puppybutton" parent="." instance=ExtResource("3_421r6")]
offset_left = -385.0
offset_top = -52.0
offset_right = -220.0
offset_bottom = 127.0

[node name="riverbutton" parent="." instance=ExtResource("3_421r6")]
offset_left = 211.0
offset_top = -49.0
offset_right = 375.0
offset_bottom = 128.0

[node name="starbutton" parent="." instance=ExtResource("3_421r6")]
offset_left = -280.0
offset_top = 126.0
offset_right = -117.0
offset_bottom = 307.0

[node name="chainbutton" parent="." instance=ExtResource("3_421r6")]
offset_left = 104.0
offset_top = 133.0
offset_right = 270.0
offset_bottom = 310.0

[node name="gustbutton" parent="." instance=ExtResource("3_421r6")]
offset_left = -84.0
offset_top = 196.0
offset_right = 79.0
offset_bottom = 374.0

[node name="eightbutton" parent="." instance=ExtResource("3_421r6")]
offset_left = 421.0
offset_top = -480.0
offset_right = 584.0
offset_bottom = -302.0

[node name="tenbutton" parent="." instance=ExtResource("3_421r6")]
offset_left = 789.0
offset_top = -480.0
offset_right = 952.0
offset_bottom = -302.0

[node name="twelvebutton" parent="." instance=ExtResource("3_421r6")]
offset_left = 426.0
offset_top = 257.0
offset_right = 589.0
offset_bottom = 435.0

[node name="fourteenbutton" parent="." instance=ExtResource("3_421r6")]
offset_left = 789.0
offset_top = 255.0
offset_right = 952.0
offset_bottom = 433.0

[node name="crosscount" type="LineEdit" parent="."]
offset_left = -259.0
offset_top = -443.0
offset_right = -75.0
offset_bottom = -368.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="squarecount" type="LineEdit" parent="."]
offset_left = 73.0
offset_top = -443.0
offset_right = 257.0
offset_bottom = -368.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="crescentcount" type="LineEdit" parent="."]
offset_left = 264.0
offset_top = -285.0
offset_right = 448.0
offset_bottom = -210.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="rivercount" type="LineEdit" parent="."]
offset_left = 337.0
offset_top = 38.0
offset_right = 521.0
offset_bottom = 113.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="chaincount" type="LineEdit" parent="."]
offset_left = 202.0
offset_top = 280.0
offset_right = 386.0
offset_bottom = 355.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="gustcount" type="LineEdit" parent="."]
offset_left = -90.0
offset_top = 395.0
offset_right = 94.0
offset_bottom = 470.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="starcount" type="LineEdit" parent="."]
offset_left = -386.0
offset_top = 282.0
offset_right = -202.0
offset_bottom = 357.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="puppycount" type="LineEdit" parent="."]
offset_left = -519.0
offset_top = 40.0
offset_right = -335.0
offset_bottom = 115.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="trianglecount" type="LineEdit" parent="."]
offset_left = -447.0
offset_top = -284.0
offset_right = -263.0
offset_bottom = -209.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="eightcount" type="LineEdit" parent="."]
offset_left = 533.0
offset_top = -418.0
offset_right = 717.0
offset_bottom = -343.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="tencount" type="LineEdit" parent="."]
offset_left = 667.0
offset_top = -418.0
offset_right = 851.0
offset_bottom = -343.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="twelvecount" type="LineEdit" parent="."]
offset_left = 537.0
offset_top = 318.0
offset_right = 721.0
offset_bottom = 393.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="fourteencount" type="LineEdit" parent="."]
offset_left = 664.0
offset_top = 318.0
offset_right = 848.0
offset_bottom = 393.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="onecount" type="LineEdit" parent="."]
offset_left = 689.0
offset_top = -265.0
offset_right = 873.0
offset_bottom = -190.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="twocount" type="LineEdit" parent="."]
offset_left = 689.0
offset_top = -124.0
offset_right = 873.0
offset_bottom = -49.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="threecount" type="LineEdit" parent="."]
offset_left = 689.0
offset_top = 13.0
offset_right = 873.0
offset_bottom = 88.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="fourcount" type="LineEdit" parent="."]
offset_left = 689.0
offset_top = 157.0
offset_right = 873.0
offset_bottom = 232.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="name_box" type="LineEdit" parent="."]
offset_left = -172.0
offset_top = -525.0
offset_right = 169.0
offset_bottom = -458.0
theme_override_font_sizes/font_size = 38
text = "worker 1"
placeholder_text = "worker  name"
alignment = 1
clear_button_enabled = true
select_all_on_focus = true

[node name="card_count" type="Label" parent="."]
offset_left = -739.0
offset_top = 229.0
offset_right = -687.0
offset_bottom = 255.0
text = "23/100"

[connection signal="button_down" from="generate" to="." method="generate_card_from_buttons"]
[connection signal="button_down" from="new" to="." method="new_deck"]
[connection signal="button_up" from="new2" to="." method="_on_new_2_button_up"]
[connection signal="button_down" from="load" to="." method="load_deck"]
[connection signal="button_down" from="save" to="." method="save_deck"]
[connection signal="button_down" from="edit" to="." method="edit_card"]
[connection signal="button_down" from="delete" to="." method="delete_card"]
[connection signal="button_down" from="prev" to="." method="select_prev"]
[connection signal="button_down" from="next" to="." method="select_next"]
